--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,6 +94,9 @@
 .main-screen-gradient {
    background: linear-gradient(180deg, #3a0088 0%, #000000 90.86%);
 }
+.main-screen-gradient-reverse {
+   background: linear-gradient(0deg, #3a0088 0%, #000000 90.86%);
+}
 .drop-shadow-text {
    text-shadow: 0px 4px 6px rgba(151, 71, 255, 0.7);
 }
